<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grayscale_50"
    android:id="@+id/frag"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.view.onboarding.walkthrough.OnboardFirstFragment">

    <ImageView
        android:id="@+id/onboardingIcon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/onboarding_1_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/bottomShadow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:src="@drawable/bottom_white_transparent_shadow"
        app:layout_constraintBottom_toBottomOf="@+id/onboardingIcon"
        app:layout_constraintEnd_toEndOf="@id/onboardingIcon"
        app:layout_constraintStart_toStartOf="@+id/onboardingIcon" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/urbanist_bold"
        android:text="@string/onboarding_title_1"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:lineSpacingExtra="10dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/onboardingIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bottomShadow"
        app:layout_constraintVertical_bias="0.785" />

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/urbanist_regular"
        android:text="@string/onboarding_description_1"
        android:textAlignment="center"
        android:textColor="@color/grayscale_900"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        app:layout_constraintVertical_bias="1.0" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/skipButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/custom_button_background"
        android:elevation="0dp"
        android:fontFamily="@font/urbanist_bold"
        android:text="@string/skip"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/primary_900"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/custom_button_background"
        android:backgroundTint="@color/primary_900"
        android:elevation="0dp"
        android:fontFamily="@font/urbanist_bold"
        android:text="@string/next"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>